# Standalone

./: CMakeLists.txt  README.md  aarch64.cmake
bsp/: CMakeLists.txt  aarch64.cmake
bsp/freertos/: CMakeLists.txt
bsp/freertos/include/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSConfigGuest.h
bsp/freertos/src/: CMakeLists.txt  sources.txt
bsp/freertos/src/portable/: CMakeLists.txt
bsp/freertos/src/portable/GCC/ARM_CA53/: CMakeLists.txt  portASM.S  sources.txt
bsp/freertos/src/portable/MemMang/: CMakeLists.txt  sources.txt
bsp/lwip/: CMakeLists.txt  aarch64.cmake
bsp/lwip/src/contrib/ports/xilinx/: CMakeLists.txt  includes.txt  sources.txt
bsp/lwip/src/contrib/ports/xilinx/include/: CMakeLists.txt  lwipopts.h
bsp/lwip/src/contrib/ports/xilinx/include/arch/: CMakeLists.txt
bsp/lwip/src/contrib/ports/xilinx/include/netif/: CMakeLists.txt
bsp/lwip/src/contrib/ports/xilinx/netif/: xtopology_g.c
bsp/lwip/src/lwip-2.1.1/src/: CMakeLists.txt
bsp/lwip/src/lwip-2.1.1/src/core/: CMakeLists.txt
bsp/lwip/src/lwip-2.1.1/src/core/ipv6/: CMakeLists.txt
bsp/lwip/src/lwip-2.1.1/src/include/lwip/: CMakeLists.txt
bsp/lwip/src/lwip-2.1.1/src/include/lwip/apps/: CMakeLists.txt
bsp/lwip/src/lwip-2.1.1/src/include/lwip/priv/: CMakeLists.txt
bsp/lwip/src/lwip-2.1.1/src/include/lwip/prot/: CMakeLists.txt
bsp/lwip/src/lwip-2.1.1/src/include/netif/: CMakeLists.txt
bsp/lwip/src/lwip-2.1.1/src/include/netif/ppp/: CMakeLists.txt
bsp/lwip/src/lwip-2.1.1/src/include/netif/ppp/polarssl/: CMakeLists.txt
bsp/lwip/src/lwip-2.1.1/src/netif/: CMakeLists.txt  sources.txt
bsp/xilinx/: CMakeLists.txt  aarch64.cmake
bsp/xilinx/include/: bspconfig.h  xparameters.h
bsp/xilinx/libsrc/: CMakeLists.txt  libraries.txt
bsp/xilinx/libsrc/avbuf_v2_3/src/: sources.txt
bsp/xilinx/libsrc/axipmon_v6_8/src/: sources.txt
bsp/xilinx/libsrc/clockps_v1_2/src/: sources.txt
bsp/xilinx/libsrc/coresightps_dcc_v1_7/src/: sources.txt
bsp/xilinx/libsrc/csudma_v1_6/src/: sources.txt
bsp/xilinx/libsrc/ddrcpsu_v1_2/src/: CMakeLists.txt
bsp/xilinx/libsrc/dpdma_v1_2/src/: sources.txt
bsp/xilinx/libsrc/dppsu_v1_2/src/: sources.txt
bsp/xilinx/libsrc/emacps_v3_119/src/: sources.txt  xemacps_g.c
bsp/xilinx/libsrc/gpiops_v3_7/src/: sources.txt
bsp/xilinx/libsrc/iicps_v3_11/src/: sources.txt  xiicps_g.c
bsp/xilinx/libsrc/ipipsu_v2_6/src/: sources.txt
bsp/xilinx/libsrc/resetps_v1_3/src/: sources.txt
bsp/xilinx/libsrc/rtcpsu_v1_9/src/: sources.txt
bsp/xilinx/libsrc/scugic_v4_2/src/: CMakeLists.txt  sources.txt
bsp/xilinx/libsrc/sdps_v3_9/src/: sources.txt  xsdps_g.c
bsp/xilinx/libsrc/spips_v3_4/src/: sources.txt  xspips_g.c
bsp/xilinx/libsrc/standalone_v7_2/src/: sources.txt
bsp/xilinx/libsrc/sysmonpsu_v2_6/src/: sources.txt
bsp/xilinx/libsrc/ttcps_v3_11/src/: sources.txt
bsp/xilinx/libsrc/uartps_v3_9/src/: sources.txt
bsp/xilinx/libsrc/usbpsu_v1_7/src/: sources.txt
bsp/xilinx/libsrc/video_common_v4_9/src/: sources.txt
bsp/xilinx/libsrc/wdtps_v3_3/src/: sources.txt
bsp/xilinx/libsrc/zdma_v1_9/src/: sources.txt
include/: boot_config.h
src/: CMakeLists.txt  lscript.ld  main.c
